SimpleWeather: refresh design pt. 4
* Resize forecast panels
* Add details to daily forecast panels (if available)
* Add wind direction
* Add wind, precip chance and text forecast to weatherdetail list item
* Other minor design improvements

--- a/SimpleWeather.UWP/App.xaml
+++ b/SimpleWeather.UWP/App.xaml
@@ -15,6 +15,8 @@
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls"/>
             </ResourceDictionary.MergedDictionaries>
+            <helpers:BooleanToGridLengthConverter x:Key="bool2GridLengthConverter" />
+            <helpers:BooleanToGridLengthConverter x:Key="inverseBool2GridLengthConverter" IsInverse="True" />
             <helpers:BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter" />
             <helpers:BooleanToVisibilityConverter x:Key="inverseBooleanToVisibilityConverter" IsInverse="True" />
             <helpers:InverseBooleanConverter x:Key="inverseBooleanConverter" />
