--- a/SimpleWeather.UWP/Controls/LocationQuery.xaml
+++ b/SimpleWeather.UWP/Controls/LocationQuery.xaml
@@ -11,8 +11,8 @@
     d:DataContext="{d:DesignInstance Type=local:LocationQueryViewModel, IsDesignTimeCreatable=True}"
     Background="White">
 
-    <UserControl.Resources>
-        <Style x:Key="LocationQueryControlStyle" TargetType="UserControl">
+    <UserControl.Style>
+        <Style TargetType="UserControl">
             <Setter Property="Background" Value="{ThemeResource SystemControlBackgroundBaseLowBrush}"/>
             <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}"/>
             <Setter Property="BorderBrush" Value="{ThemeResource SystemControlForegroundTransparentBrush}"/>
@@ -82,10 +82,6 @@
                 </Setter.Value>
             </Setter>
         </Style>
-    </UserControl.Resources>
-
-    <UserControl.Style>
-        <StaticResource ResourceKey="LocationQueryControlStyle" />
     </UserControl.Style>
 
     <Grid Height="55">
