--- a/SimpleWeather.UWP/Controls/ProgressAutoSuggestBox.xaml
+++ b/SimpleWeather.UWP/Controls/ProgressAutoSuggestBox.xaml
@@ -1,21 +1,23 @@
-﻿<Page
-    x:Class="SimpleWeather.UWP.SetupLocationsPage"
+﻿<UserControl
+    x:Class="SimpleWeather.UWP.Controls.ProgressAutoSuggestBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SimpleWeather.UWP"
+    xmlns:local="using:SimpleWeather.UWP.Controls"
     xmlns:controls="using:SimpleWeather.Controls"
     xmlns:localcontrols="using:SimpleWeather.UWP.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    d:DesignHeight="300"
+    d:DesignWidth="400">
 
-    <Page.Resources>
+    <UserControl.Resources>
         <Style TargetType="ListViewItem" x:Key="ListViewItemRevealStyle"/>
         <Style x:Key="AutoSuggestBoxTextBoxStyle" TargetType="TextBox">
             <Setter Property="MinWidth" Value="{ThemeResource TextControlThemeMinWidth}"/>
             <Setter Property="MinHeight" Value="{ThemeResource TextControlThemeMinHeight}"/>
             <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}"/>
-            <Setter Property="Background" Value="{ThemeResource SystemControlBackgroundAltHighBrush}"/>
+            <Setter Property="Background" Value="{ThemeResource SystemControlBackgroundChromeWhiteBrush}"/>
             <Setter Property="BorderBrush" Value="{ThemeResource SystemControlForegroundChromeDisabledLowBrush}"/>
             <Setter Property="SelectionHighlightColor" Value="{ThemeResource SystemControlHighlightAccentBrush}"/>
             <Setter Property="BorderThickness" Value="0"/>
@@ -26,7 +28,7 @@
             <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden"/>
             <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden"/>
             <Setter Property="ScrollViewer.IsDeferredScrollingEnabled" Value="False"/>
-            <Setter Property="Padding" Value="10,5"/>
+            <Setter Property="Padding" Value="10"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="TextBox">
@@ -123,6 +125,7 @@
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
@@ -204,13 +207,15 @@
                                     <VisualState x:Name="ButtonCollapsed"/>
                                 </VisualStateGroup>
                             </VisualStateManager.VisualStateGroups>
-                            <Border x:Name="BackgroundElement" Background="{TemplateBinding Background}" Grid.ColumnSpan="3" Margin="{TemplateBinding BorderThickness}" Opacity="{ThemeResource TextControlBackgroundRestOpacity}" Grid.Row="1" Grid.RowSpan="1"/>
-                            <Border x:Name="BorderElement" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Grid.ColumnSpan="3" Grid.Row="1" Grid.RowSpan="1"/>
+                            <Border x:Name="BackgroundElement" Background="{TemplateBinding Background}" Grid.ColumnSpan="4" Margin="{TemplateBinding BorderThickness}" Opacity="{ThemeResource TextControlBackgroundRestOpacity}" Grid.Row="1" Grid.RowSpan="1"/>
+                            <Border x:Name="BorderElement" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Grid.ColumnSpan="4" Grid.Row="1" Grid.RowSpan="1"/>
                             <ContentPresenter x:Name="HeaderContentPresenter" Grid.ColumnSpan="3" ContentTemplate="{TemplateBinding HeaderTemplate}" Content="{TemplateBinding Header}" Foreground="{ThemeResource SystemControlForegroundBaseHighBrush}" FontWeight="Normal" Margin="0,0,0,8" Grid.Row="0" TextWrapping="Wrap" Visibility="Collapsed" x:DeferLoadStrategy="Lazy"/>
                             <ScrollViewer x:Name="ContentElement" AutomationProperties.AccessibilityView="Raw" HorizontalScrollMode="{TemplateBinding ScrollViewer.HorizontalScrollMode}" HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}" IsTabStop="False" IsHorizontalRailEnabled="{TemplateBinding ScrollViewer.IsHorizontalRailEnabled}" IsVerticalRailEnabled="{TemplateBinding ScrollViewer.IsVerticalRailEnabled}" IsDeferredScrollingEnabled="{TemplateBinding ScrollViewer.IsDeferredScrollingEnabled}" Margin="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}" Grid.Row="1" VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}" VerticalScrollMode="{TemplateBinding ScrollViewer.VerticalScrollMode}" ZoomMode="Disabled"/>
                             <ContentControl x:Name="PlaceholderTextContentPresenter" Grid.ColumnSpan="3" Content="{TemplateBinding PlaceholderText}" Foreground="{ThemeResource SystemControlPageTextBaseMediumBrush}" IsHitTestVisible="False" IsTabStop="False" Margin="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}" Grid.Row="1"/>
                             <Button x:Name="DeleteButton" BorderThickness="{TemplateBinding BorderThickness}" Grid.Column="1" FontSize="{TemplateBinding FontSize}" IsTabStop="False" Margin="{ThemeResource HelperButtonThemePadding}" MinWidth="34" Grid.Row="1" Style="{StaticResource DeleteButtonStyle}" Visibility="Collapsed" VerticalAlignment="Stretch"/>
                             <Button x:Name="QueryButton" BorderThickness="{TemplateBinding BorderThickness}" Grid.Column="2" FontSize="{TemplateBinding FontSize}" IsTabStop="False" Margin="{ThemeResource HelperButtonThemePadding}" MinWidth="34" Grid.Row="1" Style="{StaticResource QueryButtonStyle}" VerticalAlignment="Stretch"/>
+                            <!-- HAXX Workaround -->
+                            <ContentControl x:Name="ProgressRingContentPresenter" Grid.Column="3" Content="{TemplateBinding Tag}" Foreground="{StaticResource SimpleBlue}" MinHeight="34" MinWidth="0" Grid.Row="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Padding="7.5,0" />
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
@@ -224,13 +229,18 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="AutoSuggestBox">
                         <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
                             <VisualStateManager.VisualStateGroups>
                                 <VisualStateGroup x:Name="Orientation">
                                     <VisualState x:Name="Landscape"/>
                                     <VisualState x:Name="Portrait"/>
                                 </VisualStateGroup>
                             </VisualStateManager.VisualStateGroups>
-                            <TextBox x:Name="TextBox" ScrollViewer.BringIntoViewOnFocusChange="False" DesiredCandidateWindowAlignment="BottomEdge" Header="{TemplateBinding Header}" Margin="0" PlaceholderText="{TemplateBinding PlaceholderText}" Style="{TemplateBinding TextBoxStyle}" Width="{TemplateBinding Width}" Canvas.ZIndex="0"/>
+                            <TextBlock Text="Add a location" FontWeight="Bold" FontSize="18" Grid.Row="0" Padding="5,15" />
+                            <TextBox x:Name="TextBox" ScrollViewer.BringIntoViewOnFocusChange="False" DesiredCandidateWindowAlignment="BottomEdge" Header="{TemplateBinding Header}" Margin="0" PlaceholderText="{TemplateBinding PlaceholderText}" Style="{TemplateBinding TextBoxStyle}" Tag="{TemplateBinding Tag}" Width="{TemplateBinding Width}" Canvas.ZIndex="0" Grid.Row="1"/>
                             <Popup x:Name="SuggestionsPopup">
                                 <Border x:Name="SuggestionsContainer">
                                     <Border.RenderTransform>
@@ -251,57 +261,28 @@
                 </Setter.Value>
             </Setter>
         </Style>
-    </Page.Resources>
+    </UserControl.Resources>
 
-    <Page.Transitions>
-        <TransitionCollection>
-            <EdgeUIThemeTransition Edge="Left" />
-        </TransitionCollection>
-    </Page.Transitions>
-
-    <ScrollViewer Background="{StaticResource SimpleBlue}">
-        <RelativePanel x:Name="MainPanel" x:DeferLoadStrategy="Lazy" VerticalAlignment="Stretch"
-                       MinHeight="80" Padding="25,0" RequestedTheme="Dark">
-            <Viewbox Name="AppLogo" Height="125" Margin="0,25,0,0"
-                     RelativePanel.Above="Location"
-                     RelativePanel.AlignHorizontalCenterWithPanel="True">
-                <Image Source="/Assets/AppLogo.png" Stretch="None" />
-            </Viewbox>
-            <AutoSuggestBox x:Name="Location" x:Uid="LocationSearchHint" PlaceholderText="Add a location to start" FontSize="24" VerticalAlignment="Center" QueryIcon="Find"
-                            RequestedTheme="Light" TextChanged="Location_TextChanged" SuggestionChosen="Location_SuggestionChosen" QuerySubmitted="Location_QuerySubmitted"
-                            UpdateTextOnSelect="False" Style="{StaticResource AutoSuggestBoxStyle}"
+    <Grid>
+        <AutoSuggestBox x:Name="SuggestBox" x:Uid="LocationSearchHint" PlaceholderText="Enter Location" FontSize="24" VerticalAlignment="Center" QueryIcon="Find"
+                            RequestedTheme="Light" UpdateTextOnSelect="False" Style="{StaticResource AutoSuggestBoxStyle}"
                             RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True"
-                            RelativePanel.AlignVerticalCenterWithPanel="True">
-                <AutoSuggestBox.ItemTemplate>
-                    <DataTemplate>
-                        <localcontrols:LocationQuery MinWidth="300" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Stretch" />
-                    </DataTemplate>
-                </AutoSuggestBox.ItemTemplate>
-                <AutoSuggestBox.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel />
-                    </ItemsPanelTemplate>
-                </AutoSuggestBox.ItemsPanel>
-            </AutoSuggestBox>
-            <Button Name="GPSButton" Grid.Row="1" Click="GPS_Click"
-                    HorizontalAlignment="Center" Margin="10"
-                    RelativePanel.Below="Location"
-                    RelativePanel.AlignHorizontalCenterWithPanel="True">
-                <Button.Content>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock x:Uid="Label_GPSFollow" Text="Current Location" VerticalAlignment="Center"
-                                   Padding="5,0" FontSize="12"/>
-                        <TextBlock Text="&#xE81D;" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center"
-                                   Padding="5,0" FontSize="12"/>
-                    </StackPanel>
-                </Button.Content>
-            </Button>
-            <ProgressRing Name="LoadingRing" Grid.Row="2" Margin="10"
-                          Height="35" Width="35" Foreground="White"
-                          HorizontalAlignment="Center" 
-                          IsActive="False" Visibility="{x:Bind LoadingRing.IsActive, Mode=OneWay}"
-                          RelativePanel.Below="GPSButton"
-                          RelativePanel.AlignHorizontalCenterWithPanel="True" />
-        </RelativePanel>
-    </ScrollViewer>
-</Page>
+                            RelativePanel.AlignVerticalCenterWithPanel="True" Margin="25">
+            <!-- HAXX Workaround -->
+            <AutoSuggestBox.Tag>
+                <ProgressRing x:Name="LoadingRing" Foreground="{StaticResource SimpleBlue}"
+                              Visibility="{x:Bind LoadingRing.IsActive, Mode=OneWay, FallbackValue='Collapsed'}" IsActive="False" />
+            </AutoSuggestBox.Tag>
+            <AutoSuggestBox.ItemTemplate>
+                <DataTemplate>
+                    <localcontrols:LocationQuery MinWidth="300" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Stretch" />
+                </DataTemplate>
+            </AutoSuggestBox.ItemTemplate>
+            <AutoSuggestBox.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel />
+                </ItemsPanelTemplate>
+            </AutoSuggestBox.ItemsPanel>
+        </AutoSuggestBox>
+    </Grid>
+</UserControl>
