--- a/SimpleWeather.UWP/Controls/WeatherDetailPanel.xaml
+++ b/SimpleWeather.UWP/Controls/WeatherDetailPanel.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="SimpleWeather.UWP.Controls.WeatherAlertPanel"
+    x:Class="SimpleWeather.UWP.Controls.WeatherDetailPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SimpleWeather.UWP.Controls"
@@ -8,14 +8,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+
     <UserControl.Resources>
         <!-- Default style for Windows.UI.Xaml.Controls.Primitives.ToggleButton -->
         <Style x:Key="ToggleButtonStyle1" TargetType="ToggleButton">
-            <Setter Property="Background" Value="{ThemeResource SystemControlBackgroundBaseLowBrush}" />
+            <Setter Property="Background" Value="White" />
             <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}"/>
             <Setter Property="BorderBrush" Value="{ThemeResource SystemControlForegroundTransparentBrush}" />
             <Setter Property="BorderThickness" Value="{ThemeResource ToggleButtonBorderThemeThickness}" />
-            <Setter Property="Padding" Value="8,4,8,4" />
+            <Setter Property="Padding" Value="0" />
             <Setter Property="HorizontalAlignment" Value="Stretch" />
             <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
@@ -38,12 +39,6 @@
                                     </VisualState>
                                     <VisualState x:Name="PointerOver">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                                       Storyboard.TargetName="RootGrid">
-                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                    Value="{ThemeResource ToggleButtonBackgroundPointerOver}" />
-                                            </ObjectAnimationUsingKeyFrames>
-
                                             <PointerUpThemeAnimation Storyboard.TargetName="RootGrid" />
                                             <DoubleAnimation BeginTime="0:0:0" Duration="0:0:0.1" To="0.0"
                                                          Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)"
@@ -52,12 +47,6 @@
                                     </VisualState>
                                     <VisualState x:Name="Pressed">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                                       Storyboard.TargetName="RootGrid">
-                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                    Value="{ThemeResource ToggleButtonBackgroundPressed}" />
-                                            </ObjectAnimationUsingKeyFrames>
-
                                             <DoubleAnimation BeginTime="0:0:0" Duration="0:0:0.1" To="0.0"
                                                          Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)"
                                                          Storyboard.TargetName="Arrow" />
@@ -66,12 +55,6 @@
                                     </VisualState>
                                     <VisualState x:Name="Disabled">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                                       Storyboard.TargetName="RootGrid">
-                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                    Value="{ThemeResource SystemControlBackgroundBaseLowBrush}" />
-                                            </ObjectAnimationUsingKeyFrames>
-
                                             <DoubleAnimation BeginTime="0:0:0" Duration="0:0:0.1" To="0.0"
                                                          Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)"
                                                          Storyboard.TargetName="Arrow" />
@@ -79,12 +62,6 @@
                                     </VisualState>
                                     <VisualState x:Name="Checked">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                                       Storyboard.TargetName="RootGrid">
-                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                    Value="{ThemeResource SystemControlHighlightAccentBrush}" />
-                                            </ObjectAnimationUsingKeyFrames>
-
                                             <PointerUpThemeAnimation Storyboard.TargetName="RootGrid" />
                                             <DoubleAnimation BeginTime="0:0:0" Duration="0:0:0.1" To="{Binding ElementName=ArrowRotation, Path=Value}"
                                                          Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)"
@@ -93,12 +70,6 @@
                                     </VisualState>
                                     <VisualState x:Name="CheckedPointerOver">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                                       Storyboard.TargetName="RootGrid">
-                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                    Value="{ThemeResource SystemControlHighlightAccentBrush}" />
-                                            </ObjectAnimationUsingKeyFrames>
-
                                             <PointerUpThemeAnimation Storyboard.TargetName="RootGrid" />
                                             <DoubleAnimation BeginTime="0:0:0" Duration="0:0:0.1" To="{Binding ElementName=ArrowRotation, Path=Value}"
                                                          Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)"
@@ -107,12 +78,6 @@
                                     </VisualState>
                                     <VisualState x:Name="CheckedPressed">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                                       Storyboard.TargetName="RootGrid">
-                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                    Value="{ThemeResource SystemControlHighlightBaseMediumLowBrush}" />
-                                            </ObjectAnimationUsingKeyFrames>
-
                                             <DoubleAnimation BeginTime="0:0:0" Duration="0:0:0.1" To="{Binding ElementName=ArrowRotation, Path=Value}"
                                                          Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)"
                                                          Storyboard.TargetName="Arrow" />
@@ -121,12 +86,6 @@
                                     </VisualState>
                                     <VisualState x:Name="CheckedDisabled">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                                       Storyboard.TargetName="RootGrid">
-                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                    Value="{ThemeResource SystemControlBackgroundBaseLowBrush}" />
-                                            </ObjectAnimationUsingKeyFrames>
-
                                             <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground"
                                                                        Storyboard.TargetName="Arrow">
                                                 <DiscreteObjectKeyFrame KeyTime="0"
@@ -150,12 +109,6 @@
                                     </VisualState>
                                     <VisualState x:Name="IndeterminatePointerOver">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                                       Storyboard.TargetName="RootGrid">
-                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                    Value="{ThemeResource SystemControlBackgroundBaseLowBrush}" />
-                                            </ObjectAnimationUsingKeyFrames>
-
                                             <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground"
                                                                        Storyboard.TargetName="Arrow">
                                                 <DiscreteObjectKeyFrame KeyTime="0"
@@ -172,12 +125,6 @@
                                     </VisualState>
                                     <VisualState x:Name="IndeterminatePressed">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                                       Storyboard.TargetName="RootGrid">
-                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                    Value="{ThemeResource SystemControlBackgroundBaseMediumLowBrush}" />
-                                            </ObjectAnimationUsingKeyFrames>
-
                                             <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground"
                                                                        Storyboard.TargetName="Arrow">
                                                 <DiscreteObjectKeyFrame KeyTime="0"
@@ -194,12 +141,6 @@
                                     </VisualState>
                                     <VisualState x:Name="IndeterminateDisabled">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background"
-                                                                       Storyboard.TargetName="RootGrid">
-                                                <DiscreteObjectKeyFrame KeyTime="0"
-                                                                    Value="{ThemeResource SystemControlBackgroundBaseLowBrush}" />
-                                            </ObjectAnimationUsingKeyFrames>
-
                                             <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground"
                                                                        Storyboard.TargetName="Arrow">
                                                 <DiscreteObjectKeyFrame KeyTime="0"
@@ -255,39 +196,52 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <ToggleButton x:Name="AlertHeader" Style="{StaticResource ToggleButtonStyle1}" Grid.Row="0"
-                      Height="40" Foreground="White" IsChecked="False">
-            <ToggleButton.Background>
-                <SolidColorBrush Color="{x:Bind AlertHeaderColor, FallbackValue='#FF006FBF', Mode=OneWay}" />
-            </ToggleButton.Background>
-            <Grid Padding="5">
+        <ToggleButton x:Name="DetailHeader" Background="White" Style="{StaticResource ToggleButtonStyle1}" Grid.Row="0"
+                      Foreground="{StaticResource SimpleBlueDark}" IsChecked="False" IsEnabled="{x:Bind ViewModel.HasExtras, Mode=OneWay}">
+            <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="40" />
-                    <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <toolkitControls:ImageEx x:Name="AlertIcon" Width="25" Margin="2,0,0,0"  Grid.Column="0"
-                                         Source="{x:Bind AlertIconSrc, TargetNullValue='/Assets/WeatherIcons/png/ic_error_white.png', Mode=OneWay}"
-                                         HorizontalAlignment="Left" VerticalAlignment="Center">
-                </toolkitControls:ImageEx>
-                <Viewbox Name="TitleBox" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center">
-                    <TextBlock x:Name="Title" Text="{x:Bind WeatherAlert.Title, FallbackValue='Flood Warning, Areal Flood Advisory'}"
-                               Padding="5" FontSize="12" />
+                <Viewbox Name="IconBox" Height="50" Width="50" Margin="8,0" Grid.Column="0">
+                    <TextBlock x:Name="WeatherIcon" Text="{x:Bind ViewModel.Icon, FallbackValue='&#xf00d;', Mode=OneWay}"
+                               Foreground="{StaticResource SimpleBlueDark}"
+                               Style="{StaticResource WeatherIcon}"/>
                 </Viewbox>
-                <TextBlock x:Name="Date" Text="{x:Bind WeatherAlert.PostDate, FallbackValue='1hr ago'}" Padding="5" Grid.Column="2"
-                           FontSize="{Binding ElementName=Title, Path=FontSize, Mode=OneWay}"
-                           VerticalAlignment="Center" />
+                <StackPanel Orientation="Vertical" Grid.Column="1">
+                    <TextBlock x:Name="Date" Text="{x:Bind ViewModel.Date, FallbackValue='Someday XX', Mode=OneWay}" FontWeight="Bold" Padding="2" MaxLines="1"
+                               TextTrimming="CharacterEllipsis"/>
+                    <TextBlock x:Name="Condition" Text="{x:Bind ViewModel.Condition, FallbackValue='50º / 44º - Sprinkles early. Mostly cloudy. Mild', Mode=OneWay}"
+                               Padding="2" MaxLines="1"
+                               FontSize="{x:Bind Date.FontSize, Mode=OneWay}" TextTrimming="CharacterEllipsis"
+                               VerticalAlignment="Center" />
+                    <TextBlock x:Name="Extra" Text="{x:Bind ViewModel.Extra, FallbackValue='&#xf078; 100%&#x2003;&#xf050; 5 mph, WNW', Mode=OneWay}"
+                               Padding="2" MaxLines="1" FontFamily="/Assets/WeatherIcons/weathericons-regular-webfont.ttf#Weather Icons"
+                               FontSize="{x:Bind Date.FontSize, Mode=OneWay}" Foreground="{StaticResource SimpleBlueLight}" TextTrimming="CharacterEllipsis"
+                               VerticalAlignment="Center" Visibility="{x:Bind ViewModel.Extra, Converter={StaticResource stringVisibilityConverter}}" />
+                </StackPanel>
             </Grid>
         </ToggleButton>
-        <StackPanel Background="LightGray" Grid.Row="1" 
-                    Padding="5" Visibility="{x:Bind AlertHeader.IsChecked, Mode=OneWay}">
+        <StackPanel Background="White" Grid.Row="1" Padding="5"
+                    Visibility="{x:Bind DetailHeader.IsChecked, Mode=OneWay}">
             <StackPanel Padding="10">
-                <TextBlock Text="{x:Bind WeatherAlert.ExpireDate}" IsTextSelectionEnabled="False"
-                           TextWrapping="WrapWholeWords" FontSize="{Binding ElementName=Title, Path=FontSize, Mode=OneWay}" />
-                <TextBlock Text="{x:Bind WeatherAlert.Message}" IsTextSelectionEnabled="False"
-                           TextWrapping="WrapWholeWords" FontSize="{Binding ElementName=Title, Path=FontSize, Mode=OneWay}" />
-                <TextBlock Text="{x:Bind WeatherAlert.Attribution}" IsTextSelectionEnabled="False"
-                           TextWrapping="WrapWholeWords" FontSize="{Binding ElementName=Title, Path=FontSize, Mode=OneWay}" />
+                <TextBlock x:Name="ConditionDescription" FontSize="{x:Bind Date.FontSize, Mode=OneWay}" TextWrapping="WrapWholeWords" HorizontalAlignment="Stretch">
+                    <Run x:Name="CondDescFirstRun" Text="{x:Bind ViewModel.ConditionLongDesc, TargetNullValue={Binding ViewModel.Condition, Mode=OneWay}, Mode=OneWay}" /><LineBreak/>
+                </TextBlock>
+                <ItemsControl ItemsSource="{x:Bind ViewModel.Extras}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate x:DataType="controls:DetailItemViewModel">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="150" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Foreground="Gray" Text="{x:Bind Label}" FontSize="{Binding ElementName=Date, Path=FontSize}" Grid.Column="0" />
+                                <TextBlock Foreground="Black" Text="{x:Bind Value}" FontSize="{Binding ElementName=Date, Path=FontSize}" Grid.Column="1" />
+                            </Grid>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
             </StackPanel>
         </StackPanel>
         <VisualStateManager.VisualStateGroups>
@@ -297,7 +251,7 @@
                         <AdaptiveTrigger MinWindowWidth="0"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="Title.FontSize" Value="12"/>
+                        <Setter Target="Date.FontSize" Value="12"/>
                     </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Medium">
@@ -305,7 +259,7 @@
                         <AdaptiveTrigger MinWindowWidth="641"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="Title.FontSize" Value="12"/>
+                        <Setter Target="Date.FontSize" Value="12"/>
                     </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Large">
@@ -313,7 +267,7 @@
                         <AdaptiveTrigger MinWindowWidth="1007"/>
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="Title.FontSize" Value="14"/>
+                        <Setter Target="Date.FontSize" Value="15"/>
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
