SimpleWeather: update weather backgrounds
* Update weather backgrounds (sources: Pexels and Unsplash)
* Add shadow to text to make it more legible

--- a/SimpleWeather.UWP/Controls/LocationPanel.xaml
+++ b/SimpleWeather.UWP/Controls/LocationPanel.xaml
@@ -5,6 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:SimpleWeather.Controls"
+    xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     mc:Ignorable="d"
     d:DesignHeight="100"
     d:DesignWidth="400"
@@ -18,9 +19,10 @@
             </Grid.ColumnDefinitions>
             <ProgressRing x:Name="LoadingRing" Grid.ColumnSpan="2" IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}" Foreground="White"/>
             <Viewbox Name="NameBox" Height="55" HorizontalAlignment="Left" Grid.Column="0" StretchDirection="DownOnly" Stretch="Uniform">
-                <TextBlock x:Name="LocationName" Text="{x:Bind ViewModel.LocationName, FallbackValue='New York, NY', Mode=OneWay}"
-                       Foreground="White" FontSize="24" VerticalAlignment="Center" Padding="10"
-                       TextWrapping="WrapWholeWords"/>
+                <toolkitControls:DropShadowPanel BlurRadius="4.0" ShadowOpacity="0.70" VerticalAlignment="Center">
+                    <TextBlock x:Name="LocationName" Text="{x:Bind ViewModel.LocationName, FallbackValue='New York, NY', Mode=OneWay}"
+                               Foreground="White" FontSize="24" Padding="10" TextWrapping="WrapWholeWords"/>
+                </toolkitControls:DropShadowPanel>
             </Viewbox>
             <Viewbox Height="55" VerticalAlignment="Center" Grid.Column="1">
                 <Grid>
@@ -29,11 +31,15 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Viewbox Name="TempBox" Height="55" Width="55" Grid.Column="0">
-                        <TextBlock x:Name="CurrentTemp" Text="{x:Bind ViewModel.CurrTemp, FallbackValue='70&#xF045;', Mode=OneWay}" 
-                               Foreground="White" FontSize="24" Padding="10"/>
+                        <toolkitControls:DropShadowPanel BlurRadius="4.0" ShadowOpacity="1.0">
+                            <TextBlock x:Name="CurrentTemp" Text="{x:Bind ViewModel.CurrTemp, FallbackValue='70&#xF045;', Mode=OneWay}" 
+                                       Foreground="White" FontSize="24" Padding="10"/>
+                        </toolkitControls:DropShadowPanel>
                     </Viewbox>
                     <Viewbox Name="IconBox" Height="55" Width="55" Grid.Column="1" Margin="5">
-                        <TextBlock x:Name="WeatherIcon" Text="{x:Bind ViewModel.WeatherIcon, FallbackValue='&#xf00d;', Mode=OneWay}" Style="{StaticResource WeatherIcon}"/>
+                        <toolkitControls:DropShadowPanel BlurRadius="2.0" ShadowOpacity="1.0">
+                            <TextBlock x:Name="WeatherIcon" Text="{x:Bind ViewModel.WeatherIcon, FallbackValue='&#xf00d;', Mode=OneWay}" Style="{StaticResource WeatherIcon}"/>
+                        </toolkitControls:DropShadowPanel>
                     </Viewbox>
                 </Grid>
             </Viewbox>
